Update reminder email.

--- a/_emails/2026-01-salon-elevated-cuisine-reminder.html
+++ b/_emails/2026-01-salon-elevated-cuisine-reminder.html
@@ -41,25 +41,16 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
         }
     </style>
 </head>
-<body style="margin: 0; padding: 0; background-color: #F5F3F0;">
-    <!-- Preview text -->
-    <div style="display: none; max-height: 0; overflow: hidden;">
-        What to know before our Elevated Cuisine Salon on Jan 15 — location, timing, and how to connect with other attendees beforehand.
-        &nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;
-    </div>
-
-    <!-- Email wrapper -->
-    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #F5F3F0;">
-        <tr>
-            <td align="center" style="padding: 24px 20px 40px 20px;">
-
-                <!-- Email container -->
-                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="max-width: 600px; background-color: #FFFFFF;">
+<body style="margin: 0; padding: 0;">
+    <!-- Email container -->
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
 
                     <!-- Header with logo -->
                     <tr>
                         <td align="center" style="padding: 40px 40px 32px 40px; border-bottom: 1px solid #E8E6E3;">
-                            <img src="https://www.tedxbreckenridge.com/assets/images/logos/tedx-breckenridge-logo-black.png" alt="TEDxBreckenridge" width="200" style="display: block; max-width: 200px; height: auto;">
+                            <a href="https://www.tedxbreckenridge.com/" target="_blank">
+                                <img src="https://www.tedxbreckenridge.com/assets/images/logos/tedx-breckenridge-logo-black.png" alt="TEDxBreckenridge" width="200" style="display: block; max-width: 200px; height: auto;">
+                            </a>
                         </td>
                     </tr>
 
@@ -188,7 +179,7 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                             <a href="https://www.tedxbreckenridge.com/events/2026-01-15-salon-elevated-cuisine/" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">Event Details</a>
                                         </p>
                                         <p style="margin: 0;">
-                                            <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon%3A+Elevated+Cuisine&dates=20260115T174500/20260115T193000&details=Join+Chefs+Kevin+Clarke+and+Bernhard+Schrag+from+Colorado+Mountain+College+as+they+explore+how+altitude+changes+the+rules+of+cooking+and+baking.%0A%0ALocation%3A+EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO&location=EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO+80443&ctz=America/Denver" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">
+                                            <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon%3A+Elevated+Cuisine&dates=20260115T180000/20260115T193000&details=Join+Chefs+Kevin+Clarke+and+Bernhard+Schrag+from+Colorado+Mountain+College+as+they+explore+how+altitude+changes+the+rules+of+cooking+and+baking.%0A%0ALocation%3A+EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO&location=EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO+80443&ctz=America/Denver" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">
                                                     Add to Calendar
                                             </a>
                                         </p>
@@ -255,13 +246,8 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                         </td>
                     </tr>
 
-                </table>
-                <!-- End email container -->
-
-            </td>
-        </tr>
     </table>
-    <!-- End email wrapper -->
+    <!-- End email container -->
 
 </body>
 </html>
