Add a slide for conversions.

--- a/_print/2026-01-salon-slides.html
+++ b/_print/2026-01-salon-slides.html
@@ -213,11 +213,82 @@ format: "1920x1080 Slides"
   </div>
 </div>
 
-<!-- Slide 10: Placeholder for Speaker Content -->
+<!-- Slide 10: Blank (for speaker content) -->
 <div class="slide slide--dark">
-  <div class="slide__content" style="justify-content: center; align-items: center; text-align: center;">
-    <h2 style="font-size: 56px; font-weight: 400; opacity: 0.6;">Placeholder slide(s) for speaker content</h2>
+  <div class="slide__content"></div>
+  <div class="slide-footer">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
   </div>
+</div>
+
+<!-- Slide 11: High Altitude Baking Adjustments Chart -->
+<div class="slide slide--dark">
+  <div class="slide__content" style="justify-content: center; align-items: center;">
+    <h2 style="font-size: 48px; font-weight: 700; margin-bottom: 60px; text-align: center;">High Altitude Baking Adjustments</h2>
+    <table style="border-collapse: collapse; font-size: 32px; width: 90%; max-width: 1400px;">
+      <thead>
+        <tr style="border-bottom: 3px solid rgba(255,255,255,0.4);">
+          <th style="padding: 20px 30px; text-align: left; font-weight: 700;">Ingredient</th>
+          <th style="padding: 20px 30px; text-align: center; font-weight: 700;">Adjustment</th>
+          <th style="padding: 20px 30px; text-align: center; font-weight: 700;">5000 feet</th>
+          <th style="padding: 20px 30px; text-align: center; font-weight: 700;">7500 feet</th>
+          <th style="padding: 20px 30px; text-align: center; font-weight: 700;">10000 feet</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="border-bottom: 1px solid rgba(255,255,255,0.2);">
+          <td style="padding: 20px 30px;">Baking powder<br>Baking soda</td>
+          <td style="padding: 20px 30px; text-align: center; color: #e57373;">&#8595; Decrease</td>
+          <td style="padding: 20px 30px; text-align: center;">40%</td>
+          <td style="padding: 20px 30px; text-align: center;">60%</td>
+          <td style="padding: 20px 30px; text-align: center;">80%</td>
+        </tr>
+        <tr style="border-bottom: 1px solid rgba(255,255,255,0.2);">
+          <td style="padding: 20px 30px;">Flour</td>
+          <td style="padding: 20px 30px; text-align: center; color: #81c784;">&#8593; Increase</td>
+          <td style="padding: 20px 30px; text-align: center;">4%</td>
+          <td style="padding: 20px 30px; text-align: center;">10%</td>
+          <td style="padding: 20px 30px; text-align: center;">20%</td>
+        </tr>
+        <tr style="border-bottom: 1px solid rgba(255,255,255,0.2);">
+          <td style="padding: 20px 30px;">Eggs</td>
+          <td style="padding: 20px 30px; text-align: center; color: #81c784;">&#8593; Increase</td>
+          <td style="padding: 20px 30px; text-align: center;">10%</td>
+          <td style="padding: 20px 30px; text-align: center;">15%</td>
+          <td style="padding: 20px 30px; text-align: center;">20%</td>
+        </tr>
+        <tr style="border-bottom: 1px solid rgba(255,255,255,0.2);">
+          <td style="padding: 20px 30px;">Sugar</td>
+          <td style="padding: 20px 30px; text-align: center; color: #e57373;">&#8595; Decrease</td>
+          <td style="padding: 20px 30px; text-align: center;">6%</td>
+          <td style="padding: 20px 30px; text-align: center;">10%</td>
+          <td style="padding: 20px 30px; text-align: center;">12%</td>
+        </tr>
+        <tr style="border-bottom: 1px solid rgba(255,255,255,0.2);">
+          <td style="padding: 20px 30px;">Fats</td>
+          <td style="padding: 20px 30px; text-align: center; color: #e57373;">&#8595; Decrease</td>
+          <td style="padding: 20px 30px; text-align: center;">0%</td>
+          <td style="padding: 20px 30px; text-align: center;">10%</td>
+          <td style="padding: 20px 30px; text-align: center;">15%</td>
+        </tr>
+        <tr>
+          <td style="padding: 20px 30px;">Liquids</td>
+          <td style="padding: 20px 30px; text-align: center; color: #81c784;">&#8593; Increase</td>
+          <td style="padding: 20px 30px; text-align: center;">15%</td>
+          <td style="padding: 20px 30px; text-align: center;">22%</td>
+          <td style="padding: 20px 30px; text-align: center;">30%</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="slide-footer">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
+  </div>
+</div>
+
+<!-- Slide 12: Blank (for speaker content) -->
+<div class="slide slide--dark">
+  <div class="slide__content"></div>
   <div class="slide-footer">
     <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
   </div>
