--- a/_print/restaurant-slideshow.html
+++ b/_print/restaurant-slideshow.html
@@ -4,299 +4,7 @@ title: "Restaurant Slideshow"
 date: 2026-01-07
 description: "Full-screen rotating slideshow of signature dishes from Summit County restaurants"
 format: "1920x1080 Slideshow"
+public: true
 ---
 
-<style>
-  /* Restaurant slideshow specific styles */
-  .slide--restaurant .slide__content {
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding-bottom: 100px;
-    padding-left: 120px;
-  }
-
-  .restaurant-info {
-    max-width: 900px;
-  }
-
-  .restaurant-info__dish-name {
-    font-size: 84px;
-    font-weight: 700;
-    line-height: 1.1;
-    margin-bottom: 20px;
-    text-shadow:
-      2px 2px 6px rgba(0, 0, 0, 0.7),
-      0 0 12px rgba(0, 0, 0, 0.5);
-  }
-
-  .restaurant-info__restaurant-name {
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 1.3;
-    margin-bottom: 16px;
-    text-shadow:
-      2px 2px 6px rgba(0, 0, 0, 0.7),
-      0 0 12px rgba(0, 0, 0, 0.5);
-  }
-
-  .restaurant-info__instagram {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-    font-size: 38px;
-    font-weight: 400;
-    text-shadow:
-      2px 2px 6px rgba(0, 0, 0, 0.7),
-      0 0 12px rgba(0, 0, 0, 0.5);
-  }
-
-  .restaurant-info__instagram-icon {
-    width: 38px;
-    height: 38px;
-    filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.7))
-            drop-shadow(0 0 12px rgba(0, 0, 0, 0.5));
-  }
-
-  /* Subtle gradient overlay for food photos */
-  .slide__overlay--restaurant {
-    background: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.5) 0%,
-      rgba(0, 0, 0, 0.25) 25%,
-      rgba(0, 0, 0, 0) 50%
-    );
-  }
-</style>
-
-<!-- Instagram icon definition (referenced by all slides) -->
-<svg style="display: none;">
-  <defs>
-    <symbol id="instagram-icon" viewBox="0 0 24 24">
-      <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
-    </symbol>
-  </defs>
-</svg>
-
-<!-- Slide 1: Chocolate Croissant - Threefold -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/threefold/chocolate-croissant.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Chocolate Croissant</div>
-      <div class="restaurant-info__restaurant-name">Threefold</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>threefoldbreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 2: Bison Short Ribs - Blue River Bistro -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/blue-river-bistro/bison-short-ribs.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Bison Short Ribs</div>
-      <div class="restaurant-info__restaurant-name">Blue River Bistro</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>blueriverbistro</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 3: Bee Tartare - Rootstalk -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/rootstalk/bee-tartare.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Bee Tartare</div>
-      <div class="restaurant-info__restaurant-name">Rootstalk</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>rootstalkbreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 4: Veggie Pizza - Salvador's Pizza -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/salvadors-pizza/veggie-pizza.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Veggie Pizza</div>
-      <div class="restaurant-info__restaurant-name">Salvador's Pizza</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>salvadorspizzaco</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 5: Pasta Spread - Radicato -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/radicato/pasta-spread.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Pasta Spread</div>
-      <div class="restaurant-info__restaurant-name">Radicato</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>radicatobreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 6: Bird Bowl - Birdcraft -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/birdcraft/bird-bowl.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Bird Bowl</div>
-      <div class="restaurant-info__restaurant-name">Birdcraft</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>birdcraftco</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 7: Sourdough - Threefold -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/threefold/sourdough.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Sourdough</div>
-      <div class="restaurant-info__restaurant-name">Threefold</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>threefoldbreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 8: Scallops - Blue River Bistro -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/blue-river-bistro/scallops.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Scallops</div>
-      <div class="restaurant-info__restaurant-name">Blue River Bistro</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>blueriverbistro</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 9: Spread of Dishes - Rootstalk -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/rootstalk/spread-of-dishes.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Spread of Dishes</div>
-      <div class="restaurant-info__restaurant-name">Rootstalk</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>rootstalkbreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 10: Chicken Sandwich - Birdcraft -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/birdcraft/chicken-sandwich.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Chicken Sandwich</div>
-      <div class="restaurant-info__restaurant-name">Birdcraft</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>birdcraftco</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 11: Pane Bread Spread - Radicato -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/radicato/pane-bread-spread.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Pane Bread Spread</div>
-      <div class="restaurant-info__restaurant-name">Radicato</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>radicatobreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 12: Winter Risotto - Blue River Bistro -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/blue-river-bistro/winter-risotto.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Winter Risotto</div>
-      <div class="restaurant-info__restaurant-name">Blue River Bistro</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>blueriverbistro</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 13: Pastry Spread - Threefold -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/threefold/pastry-spread.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Pastry Spread</div>
-      <div class="restaurant-info__restaurant-name">Threefold</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>threefoldbreck</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Slide 14: Poke Tots - Birdcraft -->
-<div class="slide slide--dark slide--restaurant">
-  <div class="slide__background" style="background-image: url('/assets/images/restaurants/birdcraft/poke-tots.jpg');"></div>
-  <div class="slide__overlay slide__overlay--restaurant"></div>
-  <div class="slide__content">
-    <div class="restaurant-info">
-      <div class="restaurant-info__dish-name">Poke Tots</div>
-      <div class="restaurant-info__restaurant-name">Birdcraft</div>
-      <div class="restaurant-info__instagram">
-        <svg class="restaurant-info__instagram-icon" fill="#fff"><use href="#instagram-icon"/></svg>
-        <span>birdcraftco</span>
-      </div>
-    </div>
-  </div>
-</div>
+{% include slides/2026-01-salon-restaurants.html %}
