Flip homepage sections.

--- a/website/index.html
+++ b/website/index.html
@@ -11,10 +11,6 @@ redirect_from:
 <!-- Save the Date Section -->
 <section class="section section-full bg-sand section-bordered" id="main-event">
     <div class="save-date-container">
-        <div class="save-date-image">
-            <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
-        </div>
-
         <div class="save-date-content">
             <div class="section-eyebrow">Save the Date</div>
             <h2 class="save-date-title">TEDxBreckenridge 2026 Main Event</h2>
@@ -36,13 +32,17 @@ redirect_from:
                 <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+2026+Main+Event&dates=20261003T180000/20261003T220000&details=Ideas+worth+spreading+in+the+heart+of+the+Rockies.+Join+us+for+an+evening+of+inspiring+talks+and+meaningful+connections.&location=Riverwalk+Center,+150+W+Adams+Ave,+Breckenridge,+CO+80424&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
             </div>
         </div>
+
+        <div class="save-date-image">
+            <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
+        </div>
     </div>
 </section>
 
 <!-- Donate Section -->
 <section class="section section-full theme-section bg-white section-bordered" id="donate">
     <div class="section-inner">
-        <div class="theme-content">
+        <div class="theme-content theme-content-reverse">
             <div class="theme-text">
                 <div class="section-header">
                     <div class="section-eyebrow">Support Our Mission</div>
